src/objects/Training_Event__c.object
<CustomObject>
    <fields>
        <fullName>Shipping_Location_Address__c</fullName>
        <formula>Shipping_Contact__r.MailingStreet &amp; &quot; - &quot; &amp; 
Shipping_Contact__r.MailingCity &amp; &quot;, &quot; &amp; Shipping_Contact__r.MailingState &amp; &quot; &quot; &amp; Shipping_Contact__r.MailingPostalCode 
&amp; &quot; - &quot; &amp; Shipping_Contact__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Location Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <picklist>
            <picklistValues>
                <fullName>X  Fedex 2nd Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1  Fedex Intl Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2  Fedex Ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3  Fedex Standard Overnight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4  Fedex Priority Overnight</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Number_s__c</fullName>
        <inlineHelpText>Shipping ID Number(s) for shipped boxes.</inlineHelpText>
        <label>Tracking Numbers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.User_Team__c</field>
                <operation>equals</operation>
                <value>Faculty, Ops</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Events2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SkillChecks_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SkillChecks Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Software_sent_to_Trainer__c</fullName>
        <label>Software sent to Trainer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_Billing_Instructions__c</fullName>
        <label>Special Billing Instructions</label>
        <picklist>
            <picklistValues>
                <fullName>Hold</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Immediately</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Special_Billing_Terms__c</fullName>
        <formula>Account__r.Special_Billing_Terms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Billing Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Banner__c</fullName>
        <formula>CASE( TEXT(Status__c) ,  
&quot;Canceled&quot; ,IMAGE(&quot;/servlet/servlet.FileDownload?file= 015410000027dtF&quot;,&quot;Canceled&quot;),
&quot;TBD&quot; ,IMAGE(&quot;/servlet/servlet.FileDownload?file= 015410000027dtG&quot;,&quot;TBD&quot;),
&quot;New&quot; ,IMAGE(&quot;/servlet/servlet.FileDownload?file= 015G000000uxKMv&quot;,&quot;New&quot;),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Banner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>CASE( TEXT(Status__c) ,  
&quot;Canceled&quot; ,IMAGE(&quot;/servlet/servlet.FileDownload?file= 015G000000kKrSZ&quot;,&quot;Canceled&quot;),
&quot;TBD&quot; ,IMAGE(&quot;/servlet/servlet.FileDownload?file= 015G000000kKrTN&quot;,&quot;TBD&quot;),
&quot;New&quot; ,IMAGE(&quot;/servlet/servlet.FileDownload?file= 015G000000uxKOc&quot;,&quot;New&quot;),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>star12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sum_of_Sales_Price__c</fullName>
        <label>Sum of Sales Price</label>
        <summarizedField>Topic__c.Sales_Price__c</summarizedField>
        <summaryForeignKey>Topic__c.Training_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TBD_Date__c</fullName>
        <label>TBD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TE_Contract_Amount__c</fullName>
        <formula>Base_Event_Price__c +  TE_Tax_Calculation__c +  Billed_Hard_Expenses_Local_Currency__c



/* 
CHANGED TO OLD FIELD UNTIL TSC UPDATES ARE MADE. 9/7/16 JASON 

Base_Event_Price_New__c +  TE_Tax_Calculation__c +  Billed_Hard_Expenses_Local_Currency__c

*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TE Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TE_Currency_Conversion__c</fullName>
        <formula>Base_Event_Price__c *  Conversion_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Conversion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TE_Scheduling_Notes__c</fullName>
        <label>TE Scheduling Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TE_Tax_Calculation__c</fullName>
        <formula>(Base_Event_Price__c +  Billed_Hard_Expenses_Local_Currency__c ) * Related_Tax_Rate__c




/*
CHANGED TO OLD FIELD UNTIL TSC UPDATES ARE MADE. 9/7/16 JASON

(Base_Event_Price_New__c +  Billed_Hard_Expenses_Local_Currency__c ) * Related_Tax_Rate__c

*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Calculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tailoring_Call_date__c</fullName>
        <formula>Training_Start_Date__c-14</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tailoring Call date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt_No__c</fullName>
        <formula>Account__r.Tax_Exempt_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Exempt No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainer_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Actual Trainer assigned to this event.</inlineHelpText>
        <label>Trainer Assigned</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Trainer Contacts</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>equals</operation>
                <value>SkillPath Trainers</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Training Events (Trainer - Actual)</relationshipLabel>
        <relationshipName>Training_Events4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trainer_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trainer Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trainer_Fee_Per_Day__c</fullName>
        <label>Trainer Fee Per Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trainer_Notes__c</fullName>
        <formula>Account__r.Trainer_Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From formula on the Account</inlineHelpText>
        <label>Account Level Trainer Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainer_Notified__c</fullName>
        <inlineHelpText>Date when Trainer Paperwork was sent.</inlineHelpText>
        <label>Trainer Notified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trainer_Requested_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer Requested</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <value>0014100000S2CNA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Training Events (Trainer Requested Contact)</relationshipLabel>
        <relationshipName>Training_Events6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trainer_Requested__c</fullName>
        <inlineHelpText>Trainer requested by AM</inlineHelpText>
        <label>xTrainer Requested</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainer_detail__c</fullName>
        <label>Trainer Requirements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Capacity__c</fullName>
        <label>Training Capacity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Coming_Within_30_Days__c</fullName>
        <formula>Training_Start_Date__c - 30  &lt;= TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Coming Within 30 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Date_Change_Tracking__c</fullName>
        <label>Training Date Change Tracking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_End_Date__c</fullName>
        <formula>Training_Num_of_Days__c + Training_Start_Date__c -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Event_Number__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <label>Training Event Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Training_Location_Address__c</fullName>
        <formula>Training_Location_Contact__r.MailingStreet &amp; &quot; - &quot; &amp;
 Training_Location_Contact__r.MailingCity &amp; &quot;, &quot; &amp;  Training_Location_Contact__r.MailingState &amp; &quot; &quot; &amp;  Training_Location_Contact__r.MailingPostalCode  
&amp; &quot; - &quot; &amp; Training_Location_Contact__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Location Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Location_Contact_City__c</fullName>
        <label>Training Location Contact City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Location_Contact_Country__c</fullName>
        <label>Training Location Contact Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Location_Contact_Name__c</fullName>
        <label>Training Location Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Location_Contact_Postal_Code__c</fullName>
        <label>Training Location Contact Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Location_Contact_State__c</fullName>
        <label>Training Location Contact State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Location_Contact_Street__c</fullName>
        <label>Training Location Contact Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Training_Location_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Location Contact</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Account.ParentId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Training Events (Training Location Contact)</relationshipLabel>
        <relationshipName>Training_Events3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Num_of_Days__c</fullName>
        <description>Number of consecutive training days</description>
        <inlineHelpText>Number of consecutive training days</inlineHelpText>
        <label>Training # of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Series__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Series</label>
        <referenceTo>Training_Series__c</referenceTo>
        <relationshipLabel>Training Events</relationshipLabel>
        <relationshipName>Training_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Start_Date__c</fullName>
        <label>Training Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Travel_Notes__c</fullName>
        <label>Travel Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Webinar_Attendees_Per_Session__c</fullName>
        <label>Webinar Attendees Per Session</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Webinar_Conference_Line_Nee__c</fullName>
        <formula>Opportunity__r.Webinar_Conference_Line_Needed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Webinar Conference Line Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webinar_Evaluation_Link__c</fullName>
        <label>Webinar Evaluation Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Webinar_Hosting__c</fullName>
        <label>Webinar Hosting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webinar_International_Conference_Line__c</fullName>
        <formula>Opportunity__r.Webinar_International_Conference_Line__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Webinar International Conference Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webinar_Notes__c</fullName>
        <label>Webinar Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Webinar_Recording_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webinar Recording Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webinar_Same_Attendees_per_Session__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webinar Same Attendees per Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webinar_Session_Times__c</fullName>
        <label>Webinar Session Times</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Webinar_SkillPath_Sends_Invites__c</fullName>
        <formula>Opportunity__r.Webinar_Client_Provided_Roster__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Webinar SkillPath Sends Invites?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Webinar_Time_Zone__c</fullName>
        <label>Webinar Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Workbook_confirmation_date__c</fullName>
        <formula>Training_Start_Date__c-7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workbook confirmation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workbook_sent_to_Trainer__c</fullName>
        <label>Workbook sent to Trainer</label>
        <type>Date</type>
    </fields>
    <label>Training Event</label>
    <listViews>
        <fullName>All_Training_Events_Today_Forward</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Training_Event_Number__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity_Owner__c</columns>
        <columns>Account__c</columns>
        <columns>Scheduling_Owner__c</columns>
        <columns>Trainer_Assigned__c</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>Training_End_Date__c</columns>
        <columns>Training_Num_of_Days__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Decision_Maker__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Training_Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>All Training Events Today Forward</label>
        <sharedTo>
            <role>On_site_Exec</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>By_Trainer</fullName>
        <columns>NAME</columns>
        <columns>Trainer_Assigned__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>By Trainer</label>
        <sharedTo>
            <role>On_site_Exec</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CANCELED_TRAINING_EVENTS</fullName>
        <columns>Cancellation_Date__c</columns>
        <columns>Cancellation_Fee__c</columns>
        <columns>Training_Event_Number__c</columns>
        <columns>LOA_Owner__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Opportunity_Owner__c</columns>
        <columns>NAME</columns>
        <columns>Decision_Maker__c</columns>
        <columns>Account__c</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>TE_Contract_Amount__c</columns>
        <columns>Billing_Currency__c</columns>
        <columns>Training_Location_Contact_City__c</columns>
        <columns>Training_Location_Contact_State__c</columns>
        <columns>Shipping_Location_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Canceled</value>
        </filters>
        <label>CANCELED TRAINING EVENTS</label>
        <sharedTo>
            <role>On_site_Exec</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CREATED_TODAY</fullName>
        <columns>Opportunity_Owner__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Training_Event_Number__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>Trainer_Requested__c</columns>
        <columns>Training_Num_of_Days__c</columns>
        <columns>Date_Options__c</columns>
        <columns>TE_Scheduling_Notes__c</columns>
        <columns>Training_Location_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Training_Num_of_Days__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>~CREATED TODAY</label>
        <sharedTo>
            <role>On_site_Exec</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Canceled_No_Date</fullName>
        <columns>NAME</columns>
        <columns>Training_Event_Number__c</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>Cancellation_Date__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cancellation_Date__c</field>
            <operation>equals</operation>
            <value>7/19/2016</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Canceled</value>
        </filters>
        <label>Canceled-No Date</label>
        <sharedTo>
            <role>On_site_Exec</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MY_Training_Events_SOLD_This_Month</fullName>
        <columns>NAME</columns>
        <columns>Training_Event_Number__c</columns>
        <columns>Account__c</columns>
        <columns>Decision_Maker__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Original_TE_Owner__c</columns>
        <columns>Opportunity_Owner__c</columns>
        <columns>Non_Commissionable__c</columns>
        <columns>Base_Event_Price__c</columns>
        <columns>Billing_Currency__c</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>Training_Num_of_Days__c</columns>
        <columns>STAR12_Eligible__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Close_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notEqual</operation>
            <value>UBT</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </filters>
        <label>MY Training Events SOLD This Month</label>
        <sharedTo>
            <role>On_site_Management</role>
            <role>On_site_Rep</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Events_Performing_Next_30_days</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>LOA_Sent_Date__c</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>Trainer_Assigned__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Shipping_Location_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Training_Start_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:30</value>
        </filters>
        <label>My Events Performing Next 30 days</label>
        <sharedTo>
            <role>On_site_Exec</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Performed_Training</fullName>
        <columns>Training_Event_Number__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity_Owner__c</columns>
        <columns>Account__c</columns>
        <columns>Decision_Maker__c</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>Base_Event_Price__c</columns>
        <columns>Trainer_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Performed</value>
        </filters>
        <label>My Performed Training</label>
        <sharedTo>
            <role>On_site_Exec</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NEW_TRAINING_EVENTS</fullName>
        <columns>LOA_Owner__c</columns>
        <columns>Date_Options_Available__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Training_Event_Number__c</columns>
        <columns>NAME</columns>
        <columns>Decision_Maker__c</columns>
        <columns>Opportunity_Owner__c</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Trainer_Requested_Contact__c</columns>
        <columns>LOA_Sent_Date__c</columns>
        <columns>Billing_Currency__c</columns>
        <columns>Training_Location_Contact_City__c</columns>
        <columns>Training_Location_Contact_State__c</columns>
        <columns>Shipping_Location_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>NEW TRAINING EVENTS</label>
        <sharedTo>
            <role>On_site_Exec</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NEW_TRAINING_EVENTS_LOAs_to_Send</fullName>
        <columns>LOA_Owner__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LOA_Pending_Approval__c</columns>
        <columns>LOA_Sent_Date__c</columns>
        <columns>Opportunity_Owner__c</columns>
        <columns>Training_Event_Number__c</columns>
        <columns>NAME</columns>
        <columns>Decision_Maker__c</columns>
        <columns>Training_Start_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Date_Options_Available__c</columns>
        <columns>Billing_Currency__c</columns>
        <columns>Training_Location_Contact_State__c</columns>
        <columns>Date_Options__c</columns>
        <columns>DM_specific_LOA_verbiage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>LOA_Sent_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>STAR12</value>
        </filters>
        <label>NEW TRAINING EVENTS - LOAs to Send</label>
        <sharedTo>
            <role>On_site_Exec</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NST_Workbook_Confirmation_TO_DO</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7</booleanFilter>
        <columns>Training_Start_Date__c</columns>
        <columns>Opportunity_Owner__c</columns>
        <columns>Training_Event_Number__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Decision_Maker__c</columns>
        <columns>AM_Wkbk_Confirmation__c</columns>
        <columns>Shipping_Contact__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AM_Wkbk_Confirmation__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Training_Start_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:10</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Opportunity_Owner__c</field>
            <operation>equals</operation>
            <value>Aaron Claar,Adam Elliott,Amanda Huie,Cheri Deverey,Christine Slack</value>
        </filters>
        <filters>
            <field>Opportunity_Owner__c</field>
            <operation>equals</operation>
            <value>Ed Nickel,Janine Bosarge,Jordan Crow,Karen Nelson-Byrnes</value>
        </filters>
        <filters>
            <field>Opportunity_Owner__c</field>
            <operation>equals</operation>
            <value>Michael McGuire,Rico Koth,Serina Heikes,Suzanne Ruskus</value>
        </filters>
        <filters>
            <field>Shipping_Location_Address__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>NST Workbook Confirmation TO DO</label>
        <sharedTo>
            <role>On_site_Exec</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Trainings</fullName>
        <columns>Training_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Training_Event_Number__c</columns>
        <columns>Account__c</columns>
        <columns>LOA_Sent_Date__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open Trainings</label>
        <sharedTo>
            <role>On_site_Exec</role>
        </sharedTo>
    </listViews>
</CustomObject>